src/main/java/io/github/heliguy4599/antlerscript/AntlerScriptParser.java
// Generated from AntlerScriptParser.g4 by ANTLR 4.13.2

package io.github.heliguy4599.antlerscript;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AntlerScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN_DIRECTIVE=1, NAMESPACE_DIRECTIVE=2, CLASSNAME_DIRECTIVE=3, USING_DIRECTIVE=4, 
		OTHER_DIRECTIVE=5, INTEGER=6, FLOAT=7, WHITESPACE=8, COMMENT=9, RAW_STRING=10, 
		STRING=11, AND=12, ARRAY=13, AS=14, BREAK=15, BY=16, ALIAS=17, CASE=18, 
		CAST=19, CLASS=20, CONST=21, CONSTRUCTOR=22, CONTINUE=23, COROUTINE=24, 
		DEFER=25, ELIF=26, ELLIPSIS=27, ELSE=28, ENUM=29, EXTENDS=30, FALSE=31, 
		FROM=32, FUNC=33, IF=34, IN=35, IS=36, LET=37, LOOP=38, MAP=39, MUT=40, 
		NOT=41, NULL=42, OBJECT=43, OPERATOR=44, OR=45, OVER=46, RETURN=47, SEALED=48, 
		SELF_CLASS=49, SELF_INSTANCE=50, SELECT=51, SUPER=52, SWITCH=53, THROW=54, 
		TO=55, TRUE=56, TRY=57, TYPE=58, UNDERSCORE=59, WHILE=60, YIELD=61, NEWLINE=62, 
		NEWLINE_SKIP=63, SEMICOLON=64, LPAREN=65, RPAREN=66, LBRACK=67, RBRACK=68, 
		LCURLY=69, RCURLY=70, LGENERIC=71, RGENERIC=72, NULL_ACCESS=73, DECORATOR=74, 
		QMARK=75, RARROW=76, COLON=77, EXCLAIM=78, COMMA=79, DOT=80, EQUAL=81, 
		PLUS=82, MINUS=83, STAR=84, SLASH=85, PERCENT=86, LESSER_THAN=87, GREATER_THAN=88, 
		PIPE=89, AMP=90, CARRET=91, TILDE=92, BIT_LSHIFT=93, BIT_RSHIFT=94, DOUBLE_QMARK=95, 
		DOUBLE_PLUS=96, DOUBLE_STAR=97, DOUBLE_SLASH=98, DOUBLE_PERCENT=99, DOUBLE_EQUAL=100, 
		DOT_EQUAL=101, NOT_EQUAL=102, PLUS_EQ=103, MINUS_EQ=104, STAR_EQ=105, 
		DOUBLE_STAR_EQ=106, SLASH_EQ=107, DOUBLE_SLASH_EQ=108, PERCENT_EQ=109, 
		DOUBLE_PERCENT_EQ=110, LESSER_OR_EQ=111, GREATER_OR_EQ=112, PIPE_EQ=113, 
		AMP_EQ=114, TILDE_EQ=115, CARRET_EQ=116, FUNC_PIPE=117, BIT_LSHIFT_EQ=118, 
		BIT_RSHIFT_EQ=119, DOUBLE_PLUS_EQ=120, DOUBLE_QMARK_EQ=121, SYMBOL=122;
	public static final int
		RULE_symbol = 0, RULE_semicolon = 1, RULE_program = 2, RULE_other_directive = 3, 
		RULE_namespace_directive = 4, RULE_classname_directive = 5, RULE_main_directive = 6, 
		RULE_using_directive = 7, RULE_repeatable_directive = 8, RULE_main_program = 9, 
		RULE_class_program = 10, RULE_namespace_program = 11, RULE_implicit_namespace_program = 12, 
		RULE_namespace_member = 13, RULE_class_top_level = 14, RULE_class_header_inside = 15, 
		RULE_class_extends = 16, RULE_symbol_chain = 17, RULE_constructor = 18, 
		RULE_constructor_params = 19, RULE_constructor_params_elm = 20, RULE_var_args = 21, 
		RULE_class_member = 22, RULE_cast = 23, RULE_operator_overload = 24, RULE_overridable = 25, 
		RULE_alias = 26, RULE_extends_assign = 27, RULE_enum_header_inside = 28, 
		RULE_type = 29, RULE_type_or = 30, RULE_type_or_right = 31, RULE_type_and = 32, 
		RULE_type_and_right = 33, RULE_type_nullable = 34, RULE_type_atomic = 35, 
		RULE_array_header = 36, RULE_func_header = 37, RULE_func_header_full = 38, 
		RULE_func_header_inferred = 39, RULE_func_params = 40, RULE_func_param_elm = 41, 
		RULE_coroutine_header = 42, RULE_coroutine_header_full = 43, RULE_coroutine_header_inferred = 44, 
		RULE_coroutine_header_yield = 45, RULE_composite = 46, RULE_lambda = 47, 
		RULE_coroutine = 48, RULE_class_header = 49, RULE_enum_header = 50, RULE_generic_parameters = 51, 
		RULE_expression = 52, RULE_expression_yield = 53, RULE_expression_assignment = 54, 
		RULE_expression_assignment_right = 55, RULE_expression_logical_or = 56, 
		RULE_expression_logical_or_right = 57, RULE_expression_logical_and = 58, 
		RULE_expression_logical_and_right = 59, RULE_expression_logical_not = 60, 
		RULE_expression_cmp = 61, RULE_expression_cmp_right = 62, RULE_expression_func_pipe = 63, 
		RULE_expression_func_pipe_right = 64, RULE_expression_bit_or = 65, RULE_expression_bit_or_right = 66, 
		RULE_expression_bit_xor = 67, RULE_expression_bit_xor_right = 68, RULE_expression_bit_and = 69, 
		RULE_expression_bit_and_right = 70, RULE_expression_bit_shift = 71, RULE_expression_bit_shift_right = 72, 
		RULE_expression_add = 73, RULE_expression_add_right = 74, RULE_expression_mult = 75, 
		RULE_expression_mult_right = 76, RULE_expression_unary = 77, RULE_expression_unary_op = 78, 
		RULE_expression_exp = 79, RULE_expression_exp_right = 80, RULE_expression_postfix = 81, 
		RULE_expression_access = 82, RULE_arguments = 83, RULE_argument_elm = 84, 
		RULE_expression_atom = 85, RULE_generic_args = 86, RULE_new_object_instance = 87, 
		RULE_new_array_instance = 88, RULE_new_class_instance = 89, RULE_object_instantiation_args = 90, 
		RULE_new_map_instance = 91, RULE_select = 92, RULE_object_literal = 93, 
		RULE_try_else = 94, RULE_keypair_list_select = 95, RULE_keypair_list_map = 96, 
		RULE_keypair_clause = 97, RULE_statement = 98, RULE_statement_block = 99, 
		RULE_loop = 100, RULE_loop_header_inside = 101, RULE_loop_capture = 102, 
		RULE_loop_capture_2 = 103, RULE_loop_range = 104, RULE_loop_while = 105, 
		RULE_loop_iteration = 106, RULE_decorator = 107, RULE_decorator_chain = 108, 
		RULE_declaration = 109, RULE_typedef = 110, RULE_if = 111, RULE_elif = 112, 
		RULE_else = 113, RULE_switch = 114, RULE_case = 115, RULE_throw = 116;
	private static String[] makeRuleNames() {
		return new String[] {
			"symbol", "semicolon", "program", "other_directive", "namespace_directive", 
			"classname_directive", "main_directive", "using_directive", "repeatable_directive", 
			"main_program", "class_program", "namespace_program", "implicit_namespace_program", 
			"namespace_member", "class_top_level", "class_header_inside", "class_extends", 
			"symbol_chain", "constructor", "constructor_params", "constructor_params_elm", 
			"var_args", "class_member", "cast", "operator_overload", "overridable", 
			"alias", "extends_assign", "enum_header_inside", "type", "type_or", "type_or_right", 
			"type_and", "type_and_right", "type_nullable", "type_atomic", "array_header", 
			"func_header", "func_header_full", "func_header_inferred", "func_params", 
			"func_param_elm", "coroutine_header", "coroutine_header_full", "coroutine_header_inferred", 
			"coroutine_header_yield", "composite", "lambda", "coroutine", "class_header", 
			"enum_header", "generic_parameters", "expression", "expression_yield", 
			"expression_assignment", "expression_assignment_right", "expression_logical_or", 
			"expression_logical_or_right", "expression_logical_and", "expression_logical_and_right", 
			"expression_logical_not", "expression_cmp", "expression_cmp_right", "expression_func_pipe", 
			"expression_func_pipe_right", "expression_bit_or", "expression_bit_or_right", 
			"expression_bit_xor", "expression_bit_xor_right", "expression_bit_and", 
			"expression_bit_and_right", "expression_bit_shift", "expression_bit_shift_right", 
			"expression_add", "expression_add_right", "expression_mult", "expression_mult_right", 
			"expression_unary", "expression_unary_op", "expression_exp", "expression_exp_right", 
			"expression_postfix", "expression_access", "arguments", "argument_elm", 
			"expression_atom", "generic_args", "new_object_instance", "new_array_instance", 
			"new_class_instance", "object_instantiation_args", "new_map_instance", 
			"select", "object_literal", "try_else", "keypair_list_select", "keypair_list_map", 
			"keypair_clause", "statement", "statement_block", "loop", "loop_header_inside", 
			"loop_capture", "loop_capture_2", "loop_range", "loop_while", "loop_iteration", 
			"decorator", "decorator_chain", "declaration", "typedef", "if", "elif", 
			"else", "switch", "case", "throw"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'::'", null, null, null, null, null, null, 
			"'and'", "'Array'", "'as'", "'break'", "'by'", "'alias'", "'case'", "'cast'", 
			"'Class'", "'const'", "'constructor'", "'continue'", "'Coroutine'", "'defer'", 
			"'elif'", "'...'", "'else'", "'Enum'", "'extends'", "'false'", "'from'", 
			"'Func'", "'if'", "'in'", "'is'", "'let'", "'loop'", "'Map'", "'mut'", 
			"'not'", "'null'", "'object'", "'operator'", "'or'", "'over'", "'return'", 
			"'sealed'", "'Self'", "'self'", "'select'", "'super'", "'switch'", "'throw'", 
			"'to'", "'true'", "'try'", "'type'", "'_'", "'while'", "'yield'", null, 
			null, "';'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<<<'", "'>>>'", 
			"'?.'", "'@'", "'?'", "'->'", "':'", "'!'", "','", "'.'", "'='", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'|'", "'&'", "'^'", "'~'", 
			"'<<'", "'>>'", "'??'", "'++'", "'**'", "'//'", "'%%'", "'=='", "'.='", 
			"'!='", "'+='", "'-='", "'*='", "'**='", "'/='", "'//='", "'%='", "'%%='", 
			"'<='", "'>='", "'|='", "'&='", "'~='", "'^='", "'|>'", "'<<='", "'>>='", 
			"'++='", "'??='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN_DIRECTIVE", "NAMESPACE_DIRECTIVE", "CLASSNAME_DIRECTIVE", 
			"USING_DIRECTIVE", "OTHER_DIRECTIVE", "INTEGER", "FLOAT", "WHITESPACE", 
			"COMMENT", "RAW_STRING", "STRING", "AND", "ARRAY", "AS", "BREAK", "BY", 
			"ALIAS", "CASE", "CAST", "CLASS", "CONST", "CONSTRUCTOR", "CONTINUE", 
			"COROUTINE", "DEFER", "ELIF", "ELLIPSIS", "ELSE", "ENUM", "EXTENDS", 
			"FALSE", "FROM", "FUNC", "IF", "IN", "IS", "LET", "LOOP", "MAP", "MUT", 
			"NOT", "NULL", "OBJECT", "OPERATOR", "OR", "OVER", "RETURN", "SEALED", 
			"SELF_CLASS", "SELF_INSTANCE", "SELECT", "SUPER", "SWITCH", "THROW", 
			"TO", "TRUE", "TRY", "TYPE", "UNDERSCORE", "WHILE", "YIELD", "NEWLINE", 
			"NEWLINE_SKIP", "SEMICOLON", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
			"LCURLY", "RCURLY", "LGENERIC", "RGENERIC", "NULL_ACCESS", "DECORATOR", 
			"QMARK", "RARROW", "COLON", "EXCLAIM", "COMMA", "DOT", "EQUAL", "PLUS", 
			"MINUS", "STAR", "SLASH", "PERCENT", "LESSER_THAN", "GREATER_THAN", "PIPE", 
			"AMP", "CARRET", "TILDE", "BIT_LSHIFT", "BIT_RSHIFT", "DOUBLE_QMARK", 
			"DOUBLE_PLUS", "DOUBLE_STAR", "DOUBLE_SLASH", "DOUBLE_PERCENT", "DOUBLE_EQUAL", 
			"DOT_EQUAL", "NOT_EQUAL", "PLUS_EQ", "MINUS_EQ", "STAR_EQ", "DOUBLE_STAR_EQ", 
			"SLASH_EQ", "DOUBLE_SLASH_EQ", "PERCENT_EQ", "DOUBLE_PERCENT_EQ", "LESSER_OR_EQ", 
			"GREATER_OR_EQ", "PIPE_EQ", "AMP_EQ", "TILDE_EQ", "CARRET_EQ", "FUNC_PIPE", 
			"BIT_LSHIFT_EQ", "BIT_RSHIFT_EQ", "DOUBLE_PLUS_EQ", "DOUBLE_QMARK_EQ", 
			"SYMBOL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AntlerScriptParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AntlerScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SymbolContext extends ParserRuleContext {
		public Token name;
		public TerminalNode SYMBOL() { return getToken(AntlerScriptParser.SYMBOL, 0); }
		public TerminalNode FROM() { return getToken(AntlerScriptParser.FROM, 0); }
		public TerminalNode TO() { return getToken(AntlerScriptParser.TO, 0); }
		public TerminalNode BY() { return getToken(AntlerScriptParser.BY, 0); }
		public TerminalNode OVER() { return getToken(AntlerScriptParser.OVER, 0); }
		public TerminalNode WHILE() { return getToken(AntlerScriptParser.WHILE, 0); }
		public SymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbol; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlerScriptParserVisitor ) return ((AntlerScriptParserVisitor<? extends T>)visitor).visitSymbol(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolContext symbol() throws RecognitionException {
		SymbolContext _localctx = new SymbolContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_symbol);
		try {
			setState(240);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SYMBOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(234);
				((SymbolContext)_localctx).name = match(SYMBOL);
				}
				break;
			case FROM:
				enterOuterAlt(_localctx, 2);
				{
				setState(235);
				((SymbolContext)_localctx).name = match(FROM);
				}
				break;
			case TO:
				enterOuterAlt(_localctx, 3);
				{
				setState(236);
				((SymbolContext)_localctx).name = match(TO);
				}
				break;
			case BY:
				enterOuterAlt(_localctx, 4);
				{
				setState(237);
				((SymbolContext)_localctx).name = match(BY);
				}
				break;
			case OVER:
				enterOuterAlt(_localctx, 5);
				{
				setState(238);
				((SymbolContext)_localctx).name = match(OVER);
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 6);
				{
				setState(239);
				((SymbolContext)_localctx).name = match(WHILE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SemicolonContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(AntlerScriptParser.NEWLINE, 0); }
		public TerminalNode SEMICOLON() { return getToken(AntlerScriptParser.SEMICOLON, 0); }
		public SemicolonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_semicolon; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlerScriptParserVisitor ) return ((AntlerScriptParserVisitor<? extends T>)visitor).visitSemicolon(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SemicolonContext semicolon() throws RecognitionException {
		SemicolonContext _localctx = new SemicolonContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_semicolon);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(242);
			_la = _input.LA(1);
			if ( !(_la==NEWLINE || _la==SEMICOLON) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Main_programContext main_program() {
			return getRuleContext(Main_programContext.class,0);
		}
		public Class_programContext class_program() {
			return getRuleContext(Class_programContext.class,0);
		}
		public Namespace_programContext namespace_program() {
			return getRuleContext(Namespace_programContext.class,0);
		}
		public Implicit_namespace_programContext implicit_namespace_program() {
			return getRuleContext(Implicit_namespace_programContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlerScriptParserVisitor ) return ((AntlerScriptParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}
